@@ -1,3 +1,7 @@
+2015-03-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* dired.el (dired-delete-file): Doc fix.  (Bug#20021)
+
 2015-03-03  Agustín Martín Domingo  <agustin6martin@gmail.com>
 
 	* textmodes/ispell.el (ispell-aspell-find-dictionary): Make sure
